--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,7 @@
                         document.querySelector(".router-view").innerHTML = 'An error occurred during loading panel';
                     }
                 };
+                xhr.onerror = () => document.querySelector(".router-view").innerHTML = 'An error occurred during loading panel';
             }
             if (event.target.matches('.connect-target-host')) {
                 let input = document.querySelector('.target-host');
@@ -225,6 +226,7 @@
                     collectors[currentDebugSession] = xhr.response.data;
                 }
             };
+            xhr.onload = () => document.querySelector(".router-view").innerHTML = 'An error occurred during loading collectors';
         }
 
     })();
